# ocr-streamlit

./: README.md  app.py  pyproject.toml
